examples/microservices/common/build/errors/custom-error.d.ts
export declare abstract class CustomError extends Error {
    abstract statusCode: number;
    constructor(message: string);
    abstract formatError(): {
        message: string;
    };
}
